# WaifuEditor

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
script/: psd_converter.py  requirements.txt  resource_generator.py  shader_generator.py
src/: CMakeLists.txt  main.cpp  tools.hpp
src/editor/: app.cpp  app.h  document.cpp  document.h  gui.cpp  gui.h  layer.cpp  layer.h  types.hpp
src/render_core/: canvas_sd.glsl  rdres.hpp  renderer.cpp  renderer.h  vulkan_driver.cpp  vulkan_driver.h
src/render_core/renderer/: model_renderer.cpp  model_renderer.h  renderer.cpp  renderer.h  ui_renderer.cpp  ui_renderer.h
test/res/: zundamon.psd
